kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /courier/add
            pathType: Prefix
            backend:
              service:
                name: stock-service
                port:
                  number: 80
          - path: /courier/reserve
            pathType: Prefix
            backend:
              service:
                name: stock-service
                port:
                  number: 80
